@@ -1,5 +1,12 @@
 $Id$
 
+2012-11-28  Christian Franke  <franke@computer.org>
+
+	smartd.conf.5.in: Document smartd_warning.sh/cmd scripts and
+	the new environment variables.
+	Makefile.am: Replace smartd_warning.* paths on man pages.
+	Reformat long sed commands.
+
 2012-11-27  Christian Franke  <franke@computer.org>
 
 	smartd.cpp: Remove trailing newlines from some MailWarning() strings.
